# Libraries

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config-doxygen.conf  lnk_msp430g2553.cmd
.github/workflows/: c-cpp.yml
ccs/: Drivers.launch
examples/: library.c
examples/adc/: CMakeLists.txt  adc_example.c
examples/dio/: CMakeLists.txt  push_button_interrupt.c
examples/gpio/: CMakeLists.txt  gpio_example.c
examples/timer/: CMakeLists.txt  timer_interrupt.c
lib/adc/: CMakeLists.txt
lib/adc/include/: adc.h
lib/adc/src/: adc.c
lib/bcm/: CMakeLists.txt
lib/bcm/include/: bcm.h
lib/bcm/src/: bcm.c
lib/dio/: CMakeLists.txt  Dio.c  Dio.h  Dio_Types.h  dio.c
lib/dio/include/: dio.h
lib/dio/src/: dio.c
lib/gpio/: CMakeLists.txt
lib/gpio/include/: gpio.h  gpio_types.h
lib/gpio/src/: gpio.c
lib/gpio/test/: CMakeLists.txt
lib/gpio/test/src/: test_gpio.cpp
lib/icu/: CMakeLists.txt
lib/icu/include/: icu.h  in430.h  iomacros.h
lib/icu/src/: icu.c
lib/platform/: CMakeLists.txt  MSP430_Registers.h  register_utils.c  register_utils.h  std_types.h
lib/platform/include/: MSP430_Registers.h  msp430g2553_registers.h  platform_types.h  register_utils.h  std_types.h
lib/platform/src/: register_utils.c
lib/timer/: CMakeLists.txt
lib/timer/include/: timer.h
lib/timer/src/: timer.c
lib/utils/: CMakeLists.txt
lib/utils/src/: register_utils.c
lib/wdt/: CMakeLists.txt
lib/wdt/include/: wdt.h
lib/wdt/src/: wdt.c
scripts/: build.sh  build_appl.sh  build_clean.sh  build_clean_example.sh  build_example.sh  run_ccs.sh  run_doxygen.sh  run_formatter.sh
src/: library.c
test/gpio/: CMakeLists.txt
test/gpio/src/: test_gpio.cpp
test/stubs/include/: register_utils.h
test/stubs/src/: register_utils.c
